Fixed underline to long and jumping arrow

--- a/modules/header/components/menu/_menu.scss
+++ b/modules/header/components/menu/_menu.scss
@@ -30,13 +30,13 @@
   .c-menu__link {
     &::after {
       display: inline-block;
-      transform: rotate(90deg); //Point downwards
-      content: "›";
+      transform: rotate(90deg);
+      content: "›"; //Point downwards
     }
   }
 
   .c-menu__title {
-    padding-right: $base-whitespace * .5;
+    margin-right: $base-whitespace * .5;
   }
 
   &.c-menu__item--toggle--active {
@@ -45,7 +45,7 @@
 
     .c-menu__link {
       &::after {
-        transform: rotate(-90deg); //Point upwards
+        content: "‹"; //Point upwards
       }
     }
 
